src/index.css
@import "tailwindcss";


* {
  box-sizing: border-box;

}

html, body {
  overflow-x: hidden;
}

:root {
  --ui-border: clamp(3px, 0.30vw, 5px);
  --ui-shadow: clamp(6px, 0.28vw, 12px);
  --ui-button-border: clamp(3px, 0.25vw, 5px);
  --ui-button-shadow: clamp(4px, 0.28vw, 6px);
  --ui-button-shadow-pressed: clamp(2.5px, 0.16vw, 4px);
  --ui-radius-xl: clamp(14px, 0.9vw, 18px);
  --ui-radius-button: clamp(12px, 0.8vw, 16px);
}

@theme {
  --color-bg: #50b8ff;
  --color-bg-2: #256a9a;
  --color-surface: #f4e7e7;
  --color-surface-2: #f1e3e3;
  --color-text: #000000;
  --color-accent: #ff7e26;
  --color-button: #73ef7a;

  --text-h1: 48px;
  --text-h2: 32px;
  --text-h3: 24px;
  --text-h4: 18px;
  --text-h5: 16px;
  --text-body: 16px;
  --text-secondary: 14px;

  --font-inter: Inter, sans-serif;
  --font-pixel: "Jersey 25", sans-serif;


}

@layer base {
  h1 {
    font-size: var(--text-h1);
    line-height: 80%;
    
    font-weight: 900;
    font-family: var(--font-pixel);
    
    text-shadow: -2px -2px 0 var(--color-text), 0px -2px 0 var(--color-text),
      2px -2px 0 var(--color-text), -2px 0px 0 var(--color-text),
      2px 0px 0 var(--color-text), -2px 2px 0 var(--color-text),
      0px 2px 0 var(--color-text), 2px 2px 0 var(--color-text),
      /* edit below value to change shadow size */
      3px 3px 0 var(--color-text);
  }

  h2 {
    font-size: var(--text-h2);
    line-height: 80%;
    
    font-weight: 500;
    font-family: var(--font-pixel);
    
  
  }
}

.selector {
  width: clamp(18rem, 25vw, 36rem);
  min-height: clamp(20rem, 28vw, 33rem);
  padding: clamp(0.75rem, 1vw, 1.25rem);

  display: flex;
  flex-direction: column;

  background-color: var(--color-surface);
  border: var(--ui-border) solid var(--color-text);
  border-radius: var(--ui-radius-xl);
  box-shadow: var(--ui-shadow) var(--ui-shadow) 0 rgba(0, 0, 0, 0.4);

  font-family: var(--font-inter);
}

.tab-list {
  display: flex;
  border-bottom: var(--ui-button-border) solid var(--color-text);
}

.tab {
  display: inline-flex;
  align-items: center;
  justify-content: center;

  padding: clamp(0.2rem, 0.6vw, 0.6rem) clamp(0.9rem, 1.2vw, 1.3rem);
  font-size: clamp(0.8rem, 1.2vw, 1.5rem);
  font-weight: 800;
  text-transform: uppercase;

  border-top: var(--ui-button-border) solid var(--color-text);
  border-left: var(--ui-button-border) solid var(--color-text);
  border-right: var(--ui-button-border) solid var(--color-text);
  border-radius: var(--ui-radius-xl) var(--ui-radius-xl) 0 0;

  cursor: pointer;
  margin-bottom: calc(-1 * var(--ui-button-border));
}

.tab-active {
  background: var(--color-surface);
  color: var(--color-text);
  border-bottom: var(--ui-button-border) solid var(--color-surface);
}

.tab-inactive {
  background: rgba(0, 0, 0, 0.4);
  color: var(--color-surface);
  border-bottom: var(--ui-button-border) solid var(--color-text);
}

/* real hitbox */
.btn {
  position: relative;
  display: inline-flex;          
  padding: 0;               
  border: 0;
  background: transparent;
  cursor: pointer;
  user-select: none;
}

.btn::after {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: var(--ui-radius-button);
  box-shadow: var(--ui-button-shadow) var(--ui-button-shadow) 0 rgba(0, 0, 0, 0.9);
  transform: translate(-1px, -1px);
  pointer-events: none;
}

.btn-face {
  position: relative;
  z-index: 1;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 100%;

  border-radius: var(--ui-radius-button);
  border: var(--ui-button-border) solid var(--color-text);

  transform: translate(0, 0);
  transition: transform 0.08s ease;
}

.btn:active .btn-face {
  transform: translate(var(--ui-button-shadow), var(--ui-button-shadow));
}

.btn-scale {
  font-size: clamp(0.7rem, 1vw, 1.1rem);
  padding: clamp(0.2rem, 0.6vw, 0.6rem) clamp(0.75rem, 1vw, 1rem);
}



.ui-text-sm {
  font-size: clamp(0.75rem, 0.8vw, 0.9rem);
}

.ui-text {
  font-size: clamp(0.7rem, 1vw, 1.5rem);
}

.ui-text-lg {
  font-size: clamp(1rem, 1.2vw, 2rem);
}

.inset-divider {
  height: clamp(2px, 0.15vw, 6px);
  width: 100%;
margin-top: clamp(6px, 0.5vw, 10px);
margin-bottom: clamp(3px, 0.3vw, 6px);
  background:
    linear-gradient(
      to bottom,
      rgba(0,0,0,0.18),
      rgba(255,255,255,0.5)
    );
}

.pixel-art {
  image-rendering: pixelated;
  image-rendering: crisp-edges; 
}

